fixed order page layout issues
p tag was causing menu to shift down

--- a/WallaceFarms/Content/Site.css
+++ b/WallaceFarms/Content/Site.css
@@ -36,8 +36,12 @@
 	height: 403px;
     position: relative;  
 }
+.content p{
+    margin:0;
+    padding:0;
+}
 
-.content #filled{
+#filled{
     background-color: white;
 }
 
